force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>מזהה קורס</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>