force-app/main/default/objects/Course__c/fields/CourseDistrict__c.field-meta.xml
<CustomField>
    <fullName>CourseDistrict__c</fullName>
    <label>מחוז הקורס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מרכז</fullName>
            </value>
            <value>
                <fullName>צפון</fullName>
            </value>
            <value>
                <fullName>דרום</fullName>
            </value>
            <value>
                <fullName>ארצי</fullName>
            </value>
            <value>
                <fullName>ירושלים</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>