force-app/main/default/objects/Course__c/fields/CourseNumber__c.field-meta.xml
<CustomField>
    <fullName>CourseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>מספר קורס</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>