force-app/main/default/objects/Course__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>הערות</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>