force-app/main/default/objects/Course__c/fields/domain__c.field-meta.xml
<CustomField>
    <fullName>domain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תחום</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>