force-app/main/default/objects/Course__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ת.סיום בפועל</label>
    <type>Date</type>
</CustomField>