force-app/main/default/objects/Course__c/fields/FundsSource__c.field-meta.xml
<CustomField>
    <fullName>FundsSource__c</fullName>
    <label>סוג ההכשרה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מתוקצב</fullName>
            </value>
            <value>
                <fullName>חרדים</fullName>
            </value>
            <value>
                <fullName>מיעוטים</fullName>
            </value>
            <value>
                <fullName>אנשים עם מוגבלות</fullName>
            </value>
            <value>
                <fullName>צעירים בסיכון</fullName>
            </value>
            <value>
                <fullName>הורים עצמאיים</fullName>
            </value>
            <value>
                <fullName>אוכלוסיית רווחה</fullName>
            </value>
            <value>
                <fullName>יוצאי אתיופיה</fullName>
            </value>
            <value>
                <fullName>חיילים</fullName>
            </value>
            <value>
                <fullName>מלונאות</fullName>
            </value>
            <value>
                <fullName>מעונות יום</fullName>
            </value>
            <value>
                <fullName>מתוקצב קורונה</fullName>
            </value>
            <value>
                <fullName>נוער</fullName>
            </value>
            <value>
                <fullName>סטארטר</fullName>
            </value>
            <value>
                <fullName>רווחה</fullName>
            </value>
            <value>
                <fullName>מסלול ירוק</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>