force-app/main/default/objects/Course__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <description>שם המפעיל</description>
    <encryptionScheme>None</encryptionScheme>
    <label>שם המפעיל</label>
    <length>255</length>
    <type>Text</type>
</CustomField>