force-app/main/default/objects/Course__c/fields/PopulationType__c.field-meta.xml
<CustomField>
    <fullName>PopulationType__c</fullName>
    <label>קהל יעד</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הציבור הרחב</fullName>
            </value>
            <value>
                <fullName>חברה חרדית</fullName>
            </value>
            <value>
                <fullName>חיילים חרדים</fullName>
            </value>
            <value>
                <fullName>שירות אזרחי</fullName>
            </value>
            <value>
                <fullName>חברה ערבית</fullName>
            </value>
            <value>
                <fullName>אנשים עם מוגבלות</fullName>
            </value>
            <value>
                <fullName>צעירים בסיכון</fullName>
            </value>
            <value>
                <fullName>הורים יחידים</fullName>
            </value>
            <value>
                <fullName>אוכלוסיית רווחה</fullName>
            </value>
            <value>
                <fullName>יוצאי אתיופיה</fullName>
            </value>
            <value>
                <fullName>חיילים</fullName>
            </value>
            <value>
                <fullName>מטפלות בעלות וותק</fullName>
            </value>
            <value>
                <fullName>אסירים</fullName>
            </value>
            <value>
                <fullName>עולים חדשים</fullName>
            </value>
            <value>
                <fullName>אוכלוסיית יוצאים בשאלה</fullName>
            </value>
            <value>
                <fullName>נשים</fullName>
            </value>
            <value>
                <fullName>גילאי 45+</fullName>
            </value>
            <value>
                <fullName>קהל רחב</fullName>
            </value>
            <value>
                <fullName>בעלי רקע בתחום</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>17</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>18</label>
            </value>
            <value>
                <fullName>19</fullName>
                <isActive>false</isActive>
                <label>19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>