force-app/main/default/objects/Course__c/fields/ProfessionCourse__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCourse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>עבור תכנית מסלול פתוח/מסלול ירוק/כיתה בעבודה/כיתה בהייטק אין צורך לבחור מגמה</inlineHelpText>
    <label>שם מגמה</label>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>