force-app/main/default/objects/Course__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>מטרת הקורס</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>