force-app/main/default/objects/Course__c/fields/Scope_study_Institution__c.field-meta.xml
<CustomField>
    <fullName>Scope_study_Institution__c</fullName>
    <label>היקף לימודים מוגדר במוסד</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>