force-app/main/default/objects/Course__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ת.פתיחה בפועל</label>
    <type>Date</type>
</CustomField>