force-app/main/default/objects/Course__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>תכנון</fullName>
                <default>true</default>
                <label>תכנון</label>
            </value>
            <value>
                <fullName>גיוס מועמדים</fullName>
            </value>
            <value>
                <fullName>הרשמה נסגרה</fullName>
            </value>
            <value>
                <fullName>נפתח</fullName>
            </value>
            <value>
                <fullName>הסתיים</fullName>
            </value>
            <value>
                <fullName>בוטל</fullName>
            </value>
            <value>
                <fullName>מוקפא</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>