force-app/main/default/objects/Course__c/fields/StudiesScope_f__c.field-meta.xml
<CustomField>
    <fullName>StudiesScope_f__c</fullName>
    <formula>ProfessionCourse__r.StudiesScope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>היקף לימודים מוגדר במגמה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>