force-app/main/default/objects/Course__c/fields/StudiesType__c.field-meta.xml
<CustomField>
    <fullName>StudiesType__c</fullName>
    <label>אופי הלימודים</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>פרונטלי</fullName>
            </value>
            <value>
                <fullName>מקוון</fullName>
            </value>
            <value>
                <fullName>היברידי</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>דיגיטלי</fullName>
                <isActive>false</isActive>
                <label>דיגיטלי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>