force-app/main/default/objects/Course__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>תגיות</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>