force-app/main/default/objects/Course__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <label>תזמון לימודים</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בוקר</fullName>
                <label>לימודי בוקר</label>
            </value>
            <value>
                <fullName>ערב</fullName>
                <label>לימודי ערב</label>
            </value>
            <value>
                <fullName>עצמי</fullName>
                <label>לימוד עצמי</label>
            </value>
            <value>
                <fullName>סמסטריאלי</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>