force-app/main/default/objects/Course__c/fields/training__c.field-meta.xml
<CustomField>
    <fullName>training__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שם ההכשרה</label>
    <length>30</length>
    <type>Text</type>
</CustomField>