force-app/main/default/objects/Course__c/validationRules/insert_name.validationRule-meta.xml
<ValidationRule>
    <fullName>insert_name</fullName>
    <active>false</active>
    <description>במידה והתוכנית היא לא אחת מהתוכניות: מסלול פתוח/המסלול הירוק/כיתה בעבודה/כיתה בהייטק, יש לאכוף הכנסת ערך בשדה &quot;שם מגמה&quot;.</description>
    <errorConditionFormula>and(ISBLANK(ProfessionCourse__c),not(or(Program__r.Name = &apos;מסלול פתוח&apos;, Program__r.Name = &apos;המסלול הירוק&apos;, Program__r.Name = &apos;כיתה בעבודה&apos;, Program__r.Name = &apos;כיתה בהייטק&apos;)))&amp;&amp;RecordType.DeveloperName =&quot;Course&quot;</errorConditionFormula>
    <errorDisplayField>ProfessionCourse__c</errorDisplayField>
    <errorMessage>יש לבחור מגמה</errorMessage>
</ValidationRule>